; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/hci/extr_hci_hal_h4.c_hci_update_adv_report_flow_control.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/hci/extr_hci_hal_h4.c_hci_update_adv_report_flow_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@hci_hal_env = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @hci_update_adv_report_flow_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hci_update_adv_report_flow_control(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i64 @host_recv_adv_packet(i32* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %16

6:                                                ; preds = %1
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @hci_hal_env, i32 0, i32 0), align 8
  %8 = add nsw i64 %7, 1
  store i64 %8, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @hci_hal_env, i32 0, i32 0), align 8
  %9 = call i64 (...) @esp_vhci_host_check_send_available()
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %6
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @hci_hal_env, i32 0, i32 0), align 8
  %13 = call i32 @btsnd_hcic_ble_update_adv_report_flow_control(i64 %12)
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @hci_hal_env, i32 0, i32 0), align 8
  br label %15

14:                                               ; preds = %6
  br label %15

15:                                               ; preds = %14, %11
  br label %16

16:                                               ; preds = %15, %1
  ret void
}

declare dso_local i64 @host_recv_adv_packet(i32*) #1

declare dso_local i64 @esp_vhci_host_check_send_available(...) #1

declare dso_local i32 @btsnd_hcic_ble_update_adv_report_flow_control(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
